# text-2-sql-agent

./: CLAUDE.md  README.md  SQL_AGENT_README.md  a2a_executor_green.py  docker-compose.agentbeats.yml  docker-compose.yml  entrypoint_green.py  entrypoint_purple.py  pyproject.toml  requirements-green.txt  requirements-purple.txt  scenario.toml  test_eval_pipeline.py
a2a/green_agent/: __init__.py  artifact_builder.py  config.py
docker/: Dockerfile.green  Dockerfile.purple
executor/: data_structures.py  hallucination.py  simple_evaluation_runner.py  sql_agent.py
results/: benchmark_011ec373.csv  benchmark_011ec373.html  benchmark_011ec373.json  benchmark_011ec373_summary.txt  benchmark_03fc42ca_summary.txt  benchmark_13666d0e_summary.txt  benchmark_230ab346.csv  benchmark_230ab346.html  benchmark_230ab346.json  benchmark_230ab346_summary.txt  benchmark_286b9bb6_summary.txt  benchmark_2a04b252.csv  benchmark_2a04b252.html  benchmark_2a04b252.json  benchmark_2a04b252_summary.txt  benchmark_2a769e57.csv  benchmark_2a769e57.json  benchmark_37932ac5.csv  benchmark_37932ac5.html  benchmark_37932ac5.json  benchmark_37932ac5_summary.txt  benchmark_54c74b49.csv  benchmark_54c74b49.json  benchmark_713beb02.csv  benchmark_713beb02.json  benchmark_8227a4e2.csv  benchmark_8227a4e2.html  benchmark_8227a4e2.json  benchmark_8227a4e2_summary.txt  benchmark_91b8539c_summary.txt  benchmark_953481c0.html  benchmark_97a3a1e0.csv  benchmark_97a3a1e0.json  benchmark_bedcb09c.csv  benchmark_bedcb09c.json  benchmark_bedcb09c_summary.txt  benchmark_c1af95e4_summary.txt  benchmark_fa422a21_summary.txt
